completed minimax flow

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             </div>
             <div class="player-container">
                 <div class="player-option">
-                    <div id="player-header"><h2>Choose your oponant</h2></div>
+                    <div id="player-header"><h2>Choose your opponant</h2></div>
                     <div class="image-container">
                         <img id="human" class="gif" src="gifs/human.gif"/>
                         <img id="robot" class="gif" src="gifs/robot.gif"/>
